update container no-sidebar product page

--- a/assets/css/sass/woocommerce/product-page.scss
+++ b/assets/css/sass/woocommerce/product-page.scss
@@ -41,10 +41,13 @@
 .single-product {
 	// Site container
 	&.site-normal-container {
-		.site-content {
-			> .woostify-container {
-				@media (min-width: $screen-md) {
-					max-width: 100%;
+		// No sidebar
+		&.no-sidebar {
+			.site-content {
+				> .woostify-container {
+					@media (min-width: $screen-md) {
+						max-width: 100%;
+					}
 				}
 			}
 		}
