--- a/style.css
+++ b/style.css
@@ -8115,7 +8115,7 @@ footer#colophon {
 }
 
 @media (min-width: 992px) {
-  .single-product.site-normal-container .site-content > .woostify-container {
+  .single-product.site-normal-container.no-sidebar .site-content > .woostify-container {
     max-width: 100%;
   }
 }
