--- a/assets/css/sass/woocommerce/checkout-page.scss
+++ b/assets/css/sass/woocommerce/checkout-page.scss
@@ -460,10 +460,6 @@
 		padding: 15px;
 
 		.woocommerce-shipping-totals.shipping {
-			td {
-				border-top-width: 1px;
-			}
-
 			.woocommerce-shipping-methods {
 				li {
 					&:first-of-type:last-of-type {
@@ -534,34 +530,12 @@
 			}
 		}
 
-		.cart-subtotal {
-			white-space: nowrap;
-
-			th,
-			td {
-				border: 0;
-				border-top: 1px solid #d9d9d9;
-				padding: 15px 0 5px 0;
-			}
-		}
-
-		.cart-discount {
-			white-space: nowrap;
-
-			th,
-			td {
-				border: 0;
-				padding: 0 0 5px 0;
-			}
-		}
-
 		.order-total {
-			white-space: nowrap;
+			border: 0;
 
 			th,
 			td {
-				border: 0;
-				padding: 0;
+				padding-bottom: 5px;
 			}
 		}
 	}
