--- a/assets/css/sass/woocommerce/cart-page.scss
+++ b/assets/css/sass/woocommerce/cart-page.scss
@@ -317,7 +317,7 @@
 					justify-content: space-between;
 					align-items: center;
 					text-align: left $i;
-					padding: 10px 0;
+					padding: 5px 0;
 
 					&:before{
 						content: attr(data-title);
@@ -379,7 +379,19 @@
 		}
 
 		.quantity {
-			height: 40px;
+			height: 30px;
+			font-size: 12px;
+			max-width: 80px;
+
+			.product-qty {
+				max-width: 30px;
+			}
+
+			.qty {
+				text-align: center;
+				padding: 0;
+				font-size: 12px;
+			}
 		}
 
 		.actions {
