update review css

--- a/assets/css/sass/woocommerce/product-page.scss
+++ b/assets/css/sass/woocommerce/product-page.scss
@@ -821,13 +821,20 @@
 
 		.comment-text {
 			flex-grow: 1;
+			display: flex;
+			flex-direction: row;
+			flex-wrap: wrap;
+			align-items: center;
+
+			.description {
+				flex: 0 0 100%;
+				margin-top: 15px;
+			}
 		}
 
 		.meta {
 			margin-bottom: 0;
 			display: inline-block;
-			height: 16px;
-			line-height: 16px;
 			vertical-align: text-top;
 		}
 	}
