--- a/assets/css/sass/woocommerce/shop-page.scss
+++ b/assets/css/sass/woocommerce/shop-page.scss
@@ -2,6 +2,10 @@
 	position: relative;
 }
 
+.product-category.product {
+	text-align: center;
+}
+
 .product-loop-image-wrapper{
 	position: relative;
 	overflow: hidden;
