--- a/assets/css/sass/base/layout/general.scss
+++ b/assets/css/sass/base/layout/general.scss
@@ -13,9 +13,20 @@
 
 // Site container
 .site-full-width-stretched-container {
-	.woostify-container {
-		padding-left: 0;
-		padding-right: 0;
+	.site-content {
+		.woostify-container {
+			max-width: 100%;
+			padding-left: 0;
+			padding-right: 0;
+		}
+	}
+}
+
+.site-full-width-container {
+	.site-content {
+		.woostify-container {
+			max-width: 100%;
+		}
 	}
 }
 
@@ -23,6 +34,28 @@
 	#view {
 		margin-left: auto;
 		margin-right: auto;
+	}
+
+	.site-content {
+		.woostify-container {
+			max-width: 100%;
+		}
+	}
+}
+
+.site-content-boxed-container {
+	#view {
+		background-color: $tr;
+	}
+
+	.site-content {
+		margin: 0 auto;
+		padding: 30px 0;
+		background-color: #fff;
+
+		.woostify-container {
+			max-width: 100%;
+		}
 	}
 }
 
