--- a/style.css
+++ b/style.css
@@ -4338,6 +4338,20 @@ dd {
   max-width: 100%;
 }
 
+.site-content-boxed-container #view {
+  background-color: rgba(0, 0, 0, 0);
+}
+
+.site-content-boxed-container .site-content {
+  margin: 0 auto;
+  padding: 30px 0;
+  background-color: #fff;
+}
+
+.site-content-boxed-container .site-content .woostify-container {
+  max-width: 100%;
+}
+
 .woostify-container {
   max-width: 100%;
   margin-left: auto;
