add woobuilder-page class to body

--- a/assets/css/sass/base/layout/footer.scss
+++ b/assets/css/sass/base/layout/footer.scss
@@ -5,6 +5,7 @@ footer#colophon {
 .site-footer {
 	clear: both;
 
+	.woobuilder-page &,
 	.edited-by-divi-builder &,
 	.elementor-page & {
 		margin-top: 0;
