update elementor css for elementor pro builder

--- a/assets/css/sass/base/layout/elementor.scss
+++ b/assets/css/sass/base/layout/elementor.scss
@@ -31,3 +31,11 @@
 	    }
 	}
 }
+
+// Header elementor builder
+header {
+	&.elementor-element {
+		position: relative;
+		z-index: 6; // Higher multi step checkout item, arrow product slider in single product
+	}
+}
