--- a/style.css
+++ b/style.css
@@ -10276,7 +10276,7 @@ header.elementor-element {
   font-weight: 600;
   text-transform: uppercase;
   width: 100%;
-  height: 50px;
+  min-height: 50px;
   margin-top: 30px;
 }
 
