--- a/assets/css/sass/woocommerce/cart-page.scss
+++ b/assets/css/sass/woocommerce/cart-page.scss
@@ -149,7 +149,7 @@
 			background-color: transparent;
 		}
 
-		@media (max-width: $screen-md) {
+		@media (max-width: $screen-md - 1) {
 			display: flex;
 			flex-direction: column-reverse;
 
