rename class elementor location

--- a/assets/css/sass/woocommerce/woocommerce.scss
+++ b/assets/css/sass/woocommerce/woocommerce.scss
@@ -143,7 +143,7 @@ $size: 40px;
 	@extend .duration;
 
 	.no-sidebar &,
-	.shop-page-with-bulder & {
+	.has-elementor-location-shop-archive & {
 		display: none;
 	}
 
